--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/************************** TAG SELECTORS ************************/
   body{
     background-color: #EDF7FA
   }
@@ -17,4 +18,10 @@
   h3{
     color: #66BFBF;
     text-decoration: underline;
+  }
+
+  /*********************** CLASS SELECTORS ***********************/
+
+  .circular {
+    border-radius: 100%;
   }
